--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "react-scripts": "0.2.1"
   },
   "dependencies": {
+    "axios": "^0.13.1",
     "react": "^15.2.1",
-    "react-dom": "^15.2.1"
+    "react-dom": "^15.2.1",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.6.1",
+    "redux": "^3.5.2",
+    "redux-promise": "^0.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
