--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.13.1",
     "babel-core": "^6.13.2",
     "react": "^15.2.1",
+    "react-bootstrap": "^0.30.2",
     "react-dnd": "^2.1.4",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
