--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^15.2.1",
     "react-dnd": "^2.1.4",
     "react-dom": "^15.2.1",
+    "react-dropzone": "^3.5.3",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
     "redux": "^3.5.2",
