--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "axios": "^0.13.1",
-    "babel-core": "^6.13.2",
+    "jquery": "^3.1.0",
     "react": "^15.2.1",
     "react-dnd": "^2.1.4",
     "react-dom": "^15.2.1",
