--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.13.1",
+    "fuse.js": "^2.4.1",
     "jquery": "^3.1.0",
     "react": "^15.2.1",
     "react-boostrap-carousel": "^2.0.2",
