--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react-scripts": "0.2.1",
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
-    "redux-devtools-log-monitor": "^1.0.11"
+    "redux-devtools-log-monitor": "^1.0.11",
+    "remote-redux-devtools": "^0.4.3"
   },
   "dependencies": {
     "axios": "^0.13.1",
